fixed issue with z-index while hover in Process component

--- a/src/Components/Features/Features.scss
+++ b/src/Components/Features/Features.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   padding-top: 55px;
+  padding-bottom: 55px;
 
   @media screen and (min-width:1041px) {
     padding-top: 65px;
